--- a/main.tex
+++ b/main.tex
@@ -142,6 +142,7 @@ this includes the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a s
 including, apart the two ones above, three relations which have been independently reported [3].
 The overall large number $2^{256}$ has an evident computational character, confirmed below by the
 dramatic appearance of the Eddington Large Number.
+
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation incompatible with the standard evolutionary cosmology. Of this order of
 magnitude, we infer rather precise relations. With the Hydrogen radius $r$, we infer $R/r \approx (4\pi \lambda_{CMB} /r)^{4}$
 precise to $0.6\%$. 
@@ -151,7 +152,7 @@ Considering the standard cosmological neutrino background (CNB), whose wavelengt
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce [5].
 
-In particular, it was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
+It was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio W boson-
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
@@ -159,6 +160,7 @@ R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4
 \end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Chapter 3, by intervention of canonical mathematical constants.
+
 The gravitational Hydrogen molecule model [3] implies the following double correlation,
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
