--- a/main.tex
+++ b/main.tex
@@ -166,7 +166,7 @@ which is the simplest case of Eddington's statistical theory [2]. The position o
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m\^prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , one obtain the double relation:
-\begin{equation}R/2\lambdabar_{H} = \sqrt{(M/m\^prime_{e})} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}\end{equation}
+$$begin{equation}R/2\lambdabar_{H} = \sqrt{(M/m\^prime_{e})} = \frac{\hbar \cdot c}{G \cdot m_{e}\cdot m_{p}}$$
 This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
