--- a/main.tex
+++ b/main.tex
@@ -165,7 +165,7 @@ The gravitational Hydrogen molecule model [3] implies the following double corre
 which is the simplest case of Eddington's statistical theory [2]. The position of a `reference particle`
 is supposed to be determined with an uncertainty ${R/2}$. For N particles of mass m components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If m is assumed to be
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
-the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \cdot m_{H}$ , one obtain the double relation:
+the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c \c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e})} = \frac{\hbar \cdot c}{G \c m_{e}\c m_{p}}
 \end{equation}
