--- a/main.tex
+++ b/main.tex
@@ -169,9 +169,10 @@ the deviance $R/(2\sqrt{(M/m\prime_{e}))}$ to the Hydrogen wavelength $\lambdaba
 \begin{equation}
 R/2\lambdabar_{H} = \sqrt{(M/m\prime_{e})} = \hbar c/G m_{e} m_{p}
 \end{equation}
-This is the definitive interpretation of the Double Large Number Fine-tuning. So, while the two
+\textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
 Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology [2].
+
 Recall that, contrary to what is often stated, Quantum Physics does not limit to Micro-physics.
 Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
 for a star containing N s atoms, in which the pressure has reached the quantum degenerancy value
@@ -181,6 +182,7 @@ century, was already contained in astrophysics textbooks. The universe radius am
 the limit of a mono-atomic star radius, of which the electrons are in degeneracy state. Eddingon was
 aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
 Hubble measurement for R was false by an order of magnitude.
+
 The reason for this discrepancy is that Lemaitre and Hubble considered galaxies of the Local
 Group, which do not participate the so-called Space expansion. In fact, it suffices to introduce a
 repulsive force proportional to galaxy groups separation distance, for explaining the canonical
@@ -188,6 +190,7 @@ exponential recession. There is no need of the so-called `dark energy`, the repu
 the cosmological constant identified to $1/R^{2}$ . The distance for which this force exceeds attractive
 gravitation between galaxies is about $10^{6}$ light years \cite{fm1}[3], which corresponds, in the Topological
 Axis, to the Atiyah Constant $\Gamma$ , presented in the Section III, see Fig 1.
+
 In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: it would be the role of massive black holes.
