--- a/main.tex
+++ b/main.tex
@@ -224,15 +224,17 @@ periodicity 8 [25] which at the origin of the name `topological axis`.
 
 \subsection{Cosmic Holography and Toponic Quantification}
 
-In the steady-state cosmologic model of Bondi, Gold and Hoyle\cite{bondi}, the Perfect Cosmological
+In the steady-state cosmologic model of Bondi, Gold and Hoyle [3], the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
-of galaxy groups, with time constant R/c being compensated by the appearance of m n massive
-neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius R is then defined by the
-Schwarszchild relation so that each point is the center of an equivalent R-radius black hole, of
+of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
+neutrons at rate $c^{3} /Gm_{n}$. The invariant visible Universe radius $R$ is then defined by the
+Schwarszchild relation so that each point is the center of an equivalent $R$-radius black hole, of
 critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-
 Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
-Principle , only devoted to 3D application \cite{bousso}[6]:
-$S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}$
+Principle , only devoted to 3D application [6]:
+\begin{equation}
+S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
+\end{equation}
 where $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Let's not forget, while the standard evolutionary cosmology
 use differential equations, the steady-state Cosmology must favor such integral relations. This one
 uses the Archimedes Testimony tying the Disk Area to its Perimeter.
