--- a/main.tex
+++ b/main.tex
@@ -235,9 +235,9 @@ Principle , only devoted to 3D application [6]:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Let's not forget, while the standard evolutionary cosmology
-use differential equations, the steady-state Cosmology must favor such integral relations. This one
-uses the Archimedes Testimony tying the Disk Area to its Perimeter.
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, the steady-state Cosmology must favor such integral relations. This one
+uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
+
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
