--- a/main.tex
+++ b/main.tex
@@ -117,7 +117,7 @@ most recent measurement [4]: 72(3) (km/s)/Megaparsec, which confirms the value m
 directly by the 1a type novae, while the standard optimization of 6 parameters results in a lower
 value of 9\%.
 
-Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 10^{-96} m$ of the visible Universe of mass $M$ with a matter-wave. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength $\lambdabar_{M} = \hbar /Mc = 4 10^{-96} m$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to $n \approx 2e^{e}$ , to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
@@ -156,7 +156,7 @@ It was noted [1] that $a_{G}$ is of order $W^{8}$ , where $W$ is the mass ratio 
 Electron. With the above $R$ value, one observes the following more symmetrical relation involving
 the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
-R/\sqrt{(\lambdabar_{p} \lambdabar_{H})} \approx (WZ)^4
+R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula
 will be pulled to the ppb range in Chapter 3, by intervention of canonical mathematical constants.
