--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,7 @@ is supposed to be determined with an uncertainty ${R/2}$. For N particles of mas
 the effective mass of the electron in the Hydrogen atom, $m\prime_{e} = m_{e} p/H$, and if, moreover, we equate
 the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
-R/2\lambdabar_{H} = \sqrt{(M/m^{\prime}_{e})} = \hbar c/G m_{e} m_{p}
+R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
 \textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. So, while the two
 pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
