--- a/main.tex
+++ b/main.tex
@@ -158,7 +158,6 @@ antimatter Oscillatory Bounce [5].
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
 periodicity 8 [25] which is at the origin of the name `topological axis`.
-
     With unit the Electron Compton wavelength, in the macro-physics side, the Universe circumference 
     is tied to bosonic critical dimension 26, while reduction lead to n = 18 (thermal photon, 
     tied to the the mammal wavelengt throught the Sternheimer scale factor j), n = 10, (superstring 
@@ -166,7 +165,6 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     the Kotov length, through a factor 2$\pi$a, with a = 137.036. For n = G, the Atiyah constant, it is the 
     galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k = e^{2}$, y = 2e, it is 
     the Grandcosmos radius.
-    
     With the same unit,the Electron Compton wavelength, in the micro-physics side, the Space-Time-Matter
     Holic dimension n = 30 is tied to c times the cosmic Supercycle period, while reduction lead to
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
@@ -174,10 +172,8 @@ periodicity 8 [25] which is at the origin of the name `topological axis`.
     the square of the String dimension and the tenth root of the Monster cardinal, it is
     the Higgs boson (125 GeV). For $k = 2e^e$, it is the Topon, the visible Universe wavelength,
     which identifies with the monoradial unit length of the Univrese Bekenstein-Hawking entropy.
-    
     With unit the electron mass, n = 24 would correspond to the graviton mass, while n = G, 
-    to the graviton mass
-    
+    to the graviton mass.
     With unit the Kotov length, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
 \label{fig:figure_label}
