--- a/main.tex
+++ b/main.tex
@@ -275,7 +275,7 @@ Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exa
 of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
-S_{BH}\, = \pi(R/l_{P})^{2} = \frac{2\pi \cdot R}{\lambdabar_{M}} = \frac{2\pi \cdot N_{m} \cdot R}{\lambdabar_{m}}
+S_{BH}\, = \pi(R/l_{P})^{2} = 2\pi R}/\lambdabar_{M} 2\pi N_{m} R}\lambdabar_{m}
 \end{equation}
 This series of large circles generates, by scanning, the approximation of a sphere: one thus passes
 from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
