--- a/main.tex
+++ b/main.tex
@@ -262,7 +262,7 @@ with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$ . The conservation o
 the Casimir effect [7]. The central problem of quanto-cosmic physics is thus solved. Moreover, the
 objections against the Hawking approach using trans-plankian frequencies are wiped out [8].
 
-In a better approximation, justified below, R is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
+In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
 \approx 18.105 Gly$, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
 physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
@@ -272,7 +272,7 @@ S\prime_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent M of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
+of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
@@ -287,7 +287,7 @@ that of standard cosmology, where initial conditions, during Planck's time, woul
 extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
 2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805
 Gly$ at $0.05\%$of the above value.
-In the Hydrogen gravitational molecule model, R is defined by the following 1D-2D-3D Special
+In the Hydrogen gravitational molecule model, $R$ is defined by the following 1D-2D-3D Special
 Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
 Hydrogen apear, as well as that of the background radiation
 $2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
