--- a/main.tex
+++ b/main.tex
@@ -268,11 +268,11 @@ physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R
 elimination of c between the classical electron radius and the Planck length. In this way, the sphere
 of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
-S\prime_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
+S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
 This value will be dramaticaly confirmed in the section I.IV.
 Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N m \lambdabar_{M}$ ,
+of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$ , and its canonical wavelength is $N_m \lambdabar_{M}$ ,
 allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
