--- a/main.tex
+++ b/main.tex
@@ -243,7 +243,7 @@ uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
 of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
 hypothesis, which is not necessary in the steady-state model. Indeed, the critical condition is
-furnished by the above very definition of R.
+furnished by the above very definition of $R$.
 
 The cosmic wavelength
 $\lambdabar_{M} \sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P} /\lambdabar_{M} \sim 10^{61}$ : hence why this holographic relation went unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is only an intermediate holographic length}.
