--- a/main.tex
+++ b/main.tex
@@ -237,7 +237,7 @@ Principle , only devoted to 3D application [6]:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, the steady-state Cosmology must favor such integral relations. This one
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincare stated [3],  the Permanent Cosmology must favor such integral relations. This
 uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions
