--- a/main.tex
+++ b/main.tex
@@ -282,15 +282,22 @@ from the Disk to the Sphere. Note that this justifies the factor $\frac{1}{4}$ i
 the approximation to be sufficient, the numbers $N_{m}$ must be very large. In this way, the Cosmos-
 Computer can use the computational properties of the mathematical constants of the continuous
 analysis, such as $\pi$ (See Section 3).
+
 The immensity of the Cosmos thus receives a much simpler computo-holographic explanation than
 that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
-extreme precision, even with inflation. By identifying the large number of Eddington $N_{Ed} = 136 \cdot
+extreme precision, even with inflation. 
+
+By identifying the large number of Eddington $N_{Ed} = 136 \cdot
 2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805
 Gly$ at $0.05\%$of the above value.
-In the Hydrogen gravitational molecule model, $R$ is defined by the following 1D-2D-3D Special
-Holographic Relation, where the wavelengths of the Electron, Proton, and Atomic and Molecular
-Hydrogen apear, as well as that of the background radiation
-$2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P} 2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}$
+
+
+In the Hydrogen gravitational molecule model, $R$ is defined by the following 1D-2D Special
+Holographic Relation, using the wavelengths of the Electron, Proton and Hydrogen, while the background wavelength appear in the 3D term involving the molecular Hydrogen wavelength:
+\begin{equation}
+2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
+\end{equation}
+
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
 background, there is a gap compatible with $(H/p G ) 2 p/6\pi_{5} $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
 This eliminates $l_{P}$ , so gives a relation independent of G:
