--- a/main.tex
+++ b/main.tex
@@ -288,8 +288,8 @@ that of standard cosmology, where initial conditions, during Planck's time, woul
 extreme precision, even with inflation. 
 
 By identifying the large number of Eddington $N_{Ed} = 136 \cdot
-2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805
-Gly$ at $0.05\%$of the above value.
+2^{256}$ as the equivalent number of neutrons in the effective mass $\frac{3M}{10}$ this leads to $R \approx 13,805 
+Gly$ at $0.05\%$ of the above value.
 
 
 In the Hydrogen gravitational molecule model, $R$ is defined by the following 1D-2D Special
@@ -299,10 +299,10 @@ Holographic Relation, using the wavelengths of the Electron, Proton and Hydrogen
 \end{equation}
 
 The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a gap compatible with $(H/p G ) 2 p/6\pi_{5} $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$, . 
-This eliminates $l_{P}$ , so gives a relation independent of G:
-$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H} 2$$
-=> $\Theta_{CMB} = 2.725820805 K$ which is the surface of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
+background, there is a gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
+This eliminates $l_{P}$, so gives a relation independent of $G$:
+$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
+=> $\Theta_{CMB} = 2.725820805 K$ which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H} 2 )^{1/3} $, proving the relevance of
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$ , (see Section 3). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy of Special Numbers of Mersenne 3, 7, 127, the sum of which is 137.
