--- a/main.tex
+++ b/main.tex
@@ -318,11 +318,11 @@ Doppler dissymmetry of the cosmic background indicates the speed of our local gr
 630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
 The mathematical continuity being excluded by the above Calculative Principle, the associated
 time 
-\begin{equation}
-\lambdabar_{M} /c = 1.33 \times 10^{-104}s
-\end{equation}
+
+$$\lambdabar_{M} /c = \hbarMc^2 \apprix 1.33 \times 10^{-104}s$$
+
 is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency about $10^{104}Hz$ \cite{fm2}[5].
+oscillatory bounce has a frequency about $10^{104}Hz$ [5].
 
 \subsection{Tachyonic Flickering Space-Time-Matter}
 
