--- a/main.tex
+++ b/main.tex
@@ -319,7 +319,7 @@ Doppler dissymmetry of the cosmic background indicates the speed of our local gr
 The mathematical continuity being excluded by the above Calculative Principle, the associated
 time 
 
-$$\lambdabar_{M} /c = \hbarMc^2 \apprix 1.33 \times 10^{-104}s$$
+$$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
 
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz$ [5].
