--- a/main.tex
+++ b/main.tex
@@ -327,12 +327,12 @@ oscillatory bounce has a frequency about $10^{104}Hz$ [5].
 \subsection{Tachyonic Flickering Space-Time-Matter}
 
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
-following considerations and observations confirm this hypothesis.
+matter-antimatter flickering respects the CPT symmetry.
 
 \subsubsection{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value R 1 only dependent of the Hydrogen radius $a\prime = aH/p$. It
+Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a\prime = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a\prime
