--- a/main.tex
+++ b/main.tex
@@ -332,13 +332,13 @@ matter-antimatter flickering respects the CPT symmetry.
 \subsubsection{Single Electron Cosmology}
 
 The single-electron cosmology [3] uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^\prime} = aH/p$. It
+Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$. It
 is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
 \end{equation}
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
-$$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a\prime + 1 - \gamma) \approx 15.77465 Gly$$
+$$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 Gly$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127}/2$ , and $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
 \begin{equation}
