--- a/main.tex
+++ b/main.tex
@@ -340,15 +340,14 @@ is the value for which the mean cosmic value is also the atomic one:
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465  Gly$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
-Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of p:
-\begin{equation}
-R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}
-\end{equation}
+Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$:
 
-Now, with the Kotov length $l_{K} = ct_{K}$ , see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
-the replacement of R by $R_{1}$ is about $4\pi$ , the canonical form for $\sqrt{a}$, the deviation being compatible
-with $p/p_{0}$ , where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for p (Section 3.1):
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx frac{4\pi^{p}}{p_{0}} \Leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from G. 
+$$R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$$
+
+Now, with the Kotov length $l_{K} = ct_{K}$, see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
+the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
+with $p/p_{0}$, where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for $p$ (Section 3.1):
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx frac{4\pi^{p}}{p_{0}} \rightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
