--- a/main.tex
+++ b/main.tex
@@ -347,7 +347,7 @@ $$R_{1} = ( p_{0} /p_{G} ) \sqrt{(\beta R R\prime)}$$
 Now, with the Kotov length $l_{K} = ct_{K}$, see below, one notes that $\sqrt{(\frac{R}{a_{w} l_{K}})}$ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$, where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for $p$ (Section 4.1):
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pip/{p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pip/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
