--- a/main.tex
+++ b/main.tex
@@ -350,15 +350,15 @@ with $p/p_{0}$, where $p_{0} = 6\pi^{5}$ is the Lenz-Wyler approximation for $p$
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w} and a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section 3.5).
+deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
+range, with $\Gamma$, the Atiyah Constant (section 4.5).
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
 graviton mass being: 
 \begin{equation}
 m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
 \end{equation} 
-The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$ , the Atiyah constant, see Section 3.8.
+The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8.
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
