--- a/main.tex
+++ b/main.tex
@@ -352,13 +352,14 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = \sqrt{(a_{G} a_{w})}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section 4.5).
+
 From the Holographic two-step interaction [3], it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $$m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55} kg$$, the
 graviton mass being: 
-\begin{equation}
-m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg
-\end{equation} 
-The corresponding ratios with electron mass(Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8.
+
+$$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} kg$$
+
+The corresponding ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below.
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
