--- a/main.tex
+++ b/main.tex
@@ -363,23 +363,23 @@ The corresponding ratios with electron mass (Fig.1) corresponds respectively to 
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
-The Kotov non-Doppler cosmic oscillation \cite{Lyuty} is not considered seriously, since it seems to
+The Kotov non-Doppler cosmic oscillation [3] is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
 this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
-characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating c between $a_{G}$ and $a_{w}=
+characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
 \hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
 \begin{equation}
 t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}
 \end{equation}
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
-\begin{equation}
+$
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
-\end{equation}, itself tied to the weak force constant 
-\begin{equation}
+$, itself tied to the weak force constant 
+$
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
-\end{equation}
-\cite{Pdc}. This introduces the product of two area speeds, confirming the
+$
+[10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
 (\lambdabar_{e} 2/t_{K} )(\hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
