--- a/main.tex
+++ b/main.tex
@@ -369,12 +369,12 @@ this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600
 characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
 \hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $10^{-7}$ dimensionless electroweak coupling constant $a_{w}$ :
 \begin{equation}
-t_{K} / t_{e} = \sqrt{(a_{G} a_{w})}
+t_{K} / t_{e} = \(a_{G} a_{w})^{1/2}
 \end{equation}
 The weak coupling constant [1] $a_{w} = (E_{F} /m_{e} c^{2} )^{2}$ is defined from the Fermi energy 
 $
 E_{F} \approx 292.806161(6) GeV \approx 573007.33(25) m_{e} c^{2}
-$, itself tied to the weak force constant 
+$, itself tied to the wea1k force constant 
 $
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
