--- a/main.tex
+++ b/main.tex
@@ -382,7 +382,7 @@ $
 [10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
-(\lambdabar_{e} 2/t_{K} )(\hbar/\sqrt{(m_{p} m_{H})})\, = \sqrt{(GG_{F})}
+(\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F}^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
 gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
