--- a/main.tex
+++ b/main.tex
@@ -382,20 +382,20 @@ $
 [10]. This introduces the product of two area speeds, confirming the
 flickering hypothesis:
 \begin{equation}
-(\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F}^{1/2}
+(\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
 so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
-gravitation and weak nuclear force. This specifies the G value to $10^-{6}$ precision (ppm). It is
-compatible with the well-elaborate $10^{-5}$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata
+gravitation and weak nuclear force. This specifies the $G$ value to $10^-{6}$ precision (ppm). It is
+compatible with the well-elaborate $10^{-5}$ BIPM measurement [11], at several sigmas from the Codata
 value [10], but the later is the mean between discordant measurements.
 Computer analysis shows that this value of G is compatible with the well-defined following
 value, with $m_{P} \equiv (\hbar c/G)^{1/2}$ and $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
 \qquad  \qquad \Leftrightarrow \\
-G \approx 6.6754552 \times 10^{-11} kg^{-1} \cdot m^{3} \cdot s^{-2} \\
+G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
-This value will be confirmed, in the ppb range, in Section III.
+This value will be confirmed, in the ppb range, in Section 4.
 
 \subsubsection{The omnipresence of the Kotov cycle in astrophysics}
 
